--- a/README
+++ b/README
@@ -5,3 +5,4 @@ git commit -m "first commit"
 git branch -M main
 git remote add origin https://github.com/BaylorDalsemer/cis4340a.git
 git push -u origin main
+My name is Baylor Dalsemer and I like to torture myself by watching the Chicago sports teams (AKA DA BEARS)
